--- a/MduiBlazor.Shared/Pages/ClassesPage.razor
+++ b/MduiBlazor.Shared/Pages/ClassesPage.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>辅助类</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">辅助类</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">辅助类</MduiText>
 </div>
 
 <PageContent>
@@ -27,7 +27,7 @@
 
 <div id="p-c">
     <h2 id="marginpadding">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">边距</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">边距</MduiText>
     </h2>
 
     <MduiText UseMduiTypo>
@@ -66,7 +66,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="float">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">快速浮动</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">快速浮动</MduiText>
     </h2>
 
     <MduiText UseMduiTypo>
@@ -82,7 +82,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="center">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">水平居中</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">水平居中</MduiText>
     </h2>
 
     <p class="mdui-typo">为任意元素添加类<code>.mdui-center</code>即可使其水平居中。</p>
@@ -91,7 +91,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="valign">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">垂直居中</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">垂直居中</MduiText>
     </h2>
 
     <p class="mdui-typo">为任意元素添加类<code>.mdui-valign</code>即可使该元素中的子元素垂直居中。</p>
@@ -100,7 +100,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="textalign">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">水平对齐方式</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">水平对齐方式</MduiText>
     </h2>
 
     <MduiText UseMduiTypo>
@@ -115,7 +115,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="loweruppercase">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">文本大小写转换</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">文本大小写转换</MduiText>
     </h2>
 
     <MduiText UseMduiTypo>
@@ -130,7 +130,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="texttruncate">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">文本自动截断</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">文本自动截断</MduiText>
     </h2>
 
     <p class="mdui-typo"><code>.mdui-text-truncate</code>可以在文本长度超出限制时，自动截断，并用省略号代替。</p>
@@ -139,7 +139,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="clearfix">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">清除浮动</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">清除浮动</MduiText>
     </h2>
 
     <p class="mdui-typo">为父元素添加<code>.mdui-clearfix</code>类可以清除浮动。</p>
@@ -148,7 +148,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="hidden">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">隐藏内容</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">隐藏内容</MduiText>
     </h2>
 
     <MduiText UseMduiTypo>
@@ -161,7 +161,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="response">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">响应式工具</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">响应式工具</MduiText>
     </h2>
 
     <p>这些工具类通过媒体查询实现针对不同设备隐藏内容。这些工具类包括：</p>
@@ -381,7 +381,7 @@
     <MduiDivider Class="mdui-m-y-5" />
 
     <h2 id="shadow">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">阴影</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">阴影</MduiText>
     </h2>
 
     <p class="mdui-m-b-4">MDUI提供了24种不同深度的阴影，可以满足Material Design中任意场景的需求。</p>
@@ -402,7 +402,7 @@
      <MduiDivider Class="mdui-m-y-5" />
 
      <h2 id="ripple">
-         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">涟漪动画效果</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">涟漪动画效果</MduiText>
      </h2>
      <p>添加涟漪动画效果后，会在点击元素时，产生向外扩散的水波纹效果。</p>
 
