--- a/MduiBlazor.Shared/Pages/ColorsPage.razor
+++ b/MduiBlazor.Shared/Pages/ColorsPage.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>颜色</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">颜色</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">颜色</MduiText>
     <p>MDUI 内置了 Material Design 的 19 组颜色，其中 16 组有强调色，所有颜色（包括背景色中的文本颜色、文本不透明度）均与 Material Design 官方文档保持一致。</p>
 </div>
 
@@ -16,7 +16,7 @@
 
 <div>
     <h2 id="colortable">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">颜色参考表</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">颜色参考表</MduiText>
     </h2>
 
     <MduiRow BreakpointXs="@Breakpoint.Xs.xs1" BreakpointSm="@Breakpoint.Sm.sm2" BreakpointMd="@Breakpoint.Md.md3">
@@ -411,7 +411,7 @@
 
 <div>
     <h2 id="themecolor">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">主题颜色</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">主题颜色</MduiText>
     </h2>
 
 
