--- a/MduiBlazor.Shared/Pages/DividerPage.razor
+++ b/MduiBlazor.Shared/Pages/DividerPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>分隔线</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">分隔线</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">分隔线</MduiText>
     <p>分割线用于管理和分隔列表和页面布局中的内容，以便让内容生成更好的视觉效果及空间感。</p>
 </div>
 
@@ -20,7 +20,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
     <p>分割线在默认主题下为深色，在深色主题下为浅色。</p>
 
@@ -37,7 +37,7 @@
 
  <div>
      <h2 id="attr">
-         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
