--- a/MduiBlazor.Shared/Pages/Examples/Buttons/IconButton.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Buttons/IconButton.razor
@@ -1,3 +1,5 @@
-<MduiIconButton Icon="add" />
-<MduiIconButton IconColor="@Colors.Theme.Accent" Icon="add" />
-<MduiIconButton Color="@Colors.Theme.Accent" Icon="add" />
+<MduiIconButton>
+    <MduiIcon Name="add" />
+</MduiIconButton>
+<MduiIconButton IconName="add" TextColor="@Colors.Theme.Accent" />
+<MduiIconButton IconName="add" Color="@Colors.Theme.Accent" />
