--- a/MduiBlazor.Shared/Pages/Examples/Classes/ComponentRipple.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Classes/ComponentRipple.razor
@@ -1,6 +1,6 @@
 <MduiButton Text>Button</MduiButton>
 <MduiButton DisableRaised Color="@Colors.Blue.Primary">Button</MduiButton>
-<MduiIconButton Icon="add" />
-<MduiIconButton Icon="add" Color="@Colors.Blue.Primary" />
-<MduiFab Mini Icon="add" Color="@Colors.Blue.Primary" />
-<MduiFab Icon="add" Color="@Colors.Blue.Primary" />
+<MduiIconButton IconName="add" />
+<MduiIconButton IconName="add" Color="@Colors.Blue.Primary" />
+<MduiFab Mini IconName="add" Color="@Colors.Blue.Primary" />
+<MduiFab IconName="add" Color="@Colors.Blue.Primary" />
