--- a/MduiBlazor.Shared/Pages/Examples/Fabs/HideFab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Fabs/HideFab.razor
@@ -1,5 +1,5 @@
 <MduiButton Color="@Colors.Theme.Accent" OnClick="@(_=>hide=!hide)">@(hide ? "显示" : "隐藏")</MduiButton>
-<MduiFab Hide="@hide" Icon="add" Color="@Colors.Theme.Accent" />
+<MduiFab Hide="@hide" IconName="add" Color="@Colors.Theme.Accent" />
 
 @code {
     bool hide;
