--- a/MduiBlazor.Shared/Pages/FabsPage.razor
+++ b/MduiBlazor.Shared/Pages/FabsPage.razor
@@ -1,10 +1,10 @@
 @page "/fabbuttons"
 @inherits BasePage
-@using MduiBlazor.Shared.Pages.Examples.FabButtons
+@using MduiBlazor.Shared.Pages.Examples.Fabs
 
 <PageTitle>浮动操作按钮</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">浮动操作按钮</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">浮动操作按钮</MduiText>
 </div>
 
 <PageContent>
@@ -21,7 +21,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>普通按钮</b></MduiText>
@@ -38,7 +38,7 @@
 
 <div>
     <h2 id="fabmenu">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">弹出菜单</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">弹出菜单</MduiText>
     </h2>
     <ExampleSection Label="Code" Component="@typeof(FabMenu)" />
  </div>
@@ -47,7 +47,7 @@
 
  <div>
      <h2 id="attr">
-         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
