--- a/MduiBlazor.Shared/Pages/GridPage.razor
+++ b/MduiBlazor.Shared/Pages/GridPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>网格容器</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">网格容器</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">网格容器</MduiText>
     <p>MDUI 提供了一套响应式、移动设备优先的 12 列网格布局系统。</p>
 </div>
 
@@ -25,7 +25,7 @@
 
 <div>
     <h2 id="container">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">容器</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">容器</MduiText>
     </h2>
 
     <p class="mdui-typo"><code>MduiContainer</code>组件默认占据 92% - 96% 的屏幕宽度，且最大宽度 1280px。</p>
@@ -38,7 +38,7 @@
 
 <div id="p-g">
      <h2 id="grid">
-         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">网格</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">网格</MduiText>
      </h2>
 
      <MduiText id="simple" Typo="@Typo.subheading"><b>基础网格</b></MduiText>
@@ -148,7 +148,7 @@
 
  <div>
      <h2 id="attr">
-         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
