--- a/MduiBlazor.Shared/Pages/IconsPage.razor
+++ b/MduiBlazor.Shared/Pages/IconsPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>图标</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">图标</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">图标</MduiText>
     <p>MDUI 内置了 Material Icons 的 932 个图标，除了这些图标，你也可以使用第三方的图标。</p>
 </div>
 
@@ -18,7 +18,7 @@
 
 <div>
     <h2 id="materialicon">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Material图标</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Material图标</MduiText>
     </h2>
 
     <p class="mdui-typo">我们列出了所有<a href="material_icon">Material Icons</a>的图标，你可以直接点击图标获取图标代码。</p>
@@ -32,7 +32,7 @@
 
 <div>
     <h2 id="thirdicon">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">第三方图标</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">第三方图标</MduiText>
     </h2>
 
     <p class="mdui-typo">要使用第三方图标库，需要先引入第三方图标库的 CSS 文件。然后在<code>MduiIcon</code>、<code>MduiIconButton</code>等含有图标的组件中设置<code>Custom</code>或<code>CustomIcon</code>参数为<code>true</code>。下面的实例使用的是 <a href="http://ionicons.com" target="_blank">ionicons</a> 的图标。</p>
@@ -43,7 +43,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
