--- a/MduiBlazor.Shared/Pages/LayoutPage.razor
+++ b/MduiBlazor.Shared/Pages/LayoutPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>主题和布局</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">主题和布局</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">主题和布局</MduiText>
 </div>
 
 <PageContent>
@@ -17,7 +17,7 @@
 
 <div>
     <h2 id="container">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">布局组件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">布局组件</MduiText>
     </h2>
 
     <MduiText Typo="@Typo.subheading"><b>布局组件</b></MduiText>
@@ -43,7 +43,7 @@
 
 <div>
     <h2 id="theme">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">主题</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">主题</MduiText>
     </h2>
 
     <MduiText Typo="@Typo.subheading"><b>主题色</b></MduiText>
@@ -59,7 +59,7 @@
 
  <div>
      <h2 id="attr">
-         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
