--- a/MduiBlazor.Shared/Pages/MediaPage.razor
+++ b/MduiBlazor.Shared/Pages/MediaPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>媒体</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">媒体</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">媒体</MduiText>
 </div>
 
 <PageContent>
@@ -24,7 +24,7 @@
 
 <div>
     <h2 id="img">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">图片</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">图片</MduiText>
     </h2>
 
     <MduiText id="fluidimg" Typo="@Typo.subheading">响应式</MduiText>
@@ -44,7 +44,7 @@
 
 <div>
     <h2 id="video">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">视频</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">视频</MduiText>
     </h2>
 
     <MduiText id="iframevideo" Typo="@Typo.subheading">响应式嵌入式视频</MduiText>
@@ -60,7 +60,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
