--- a/MduiBlazor.Shared/Pages/PanelsPage.razor
+++ b/MduiBlazor.Shared/Pages/PanelsPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>可扩展面板</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">可扩展面板</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">可扩展面板</MduiText>
 </div>
 
 <PageContent>
@@ -24,7 +24,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading">简单Panel</MduiText>
@@ -59,7 +59,7 @@
 
  <div>
      <h2 id="attr">
-         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
