--- a/MduiBlazor.Shared/Pages/ProgressPage.razor
+++ b/MduiBlazor.Shared/Pages/ProgressPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>进度指示器</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">进度指示器</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">进度指示器</MduiText>
     <p>进度指示器包括线性进度指示器和圆形进度指示器。</p>
 </div>
 
@@ -24,7 +24,7 @@
 
 <div>
     <h2 id="lineProgress">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">线性进度指示器</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">线性进度指示器</MduiText>
     </h2>
 
     <MduiText id="simpleLine" Typo="@Typo.subheading"><b>简单线性进度指示器</b></MduiText>
@@ -40,7 +40,7 @@
 
 <div>
     <h2 id="spinnerProgress">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">圆形进度指示器</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">圆形进度指示器</MduiText>
     </h2>
 
     <MduiText id="simpleSpinner" Typo="@Typo.subheading"><b>单色</b></MduiText>
@@ -54,7 +54,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
