--- a/MduiBlazor.Shared/Pages/SelectControlPage.razor
+++ b/MduiBlazor.Shared/Pages/SelectControlPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>下拉选择</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">下拉选择</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">下拉选择</MduiText>
     <p>下拉选择可以让用户在多个选项之间进行选择。</p>
 </div>
 
@@ -21,7 +21,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
 
     <MduiText id="radio" Typo="@Typo.subheading"><b>单选框</b></MduiText>
@@ -38,7 +38,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
