--- a/MduiBlazor.Shared/Pages/SliderPage.razor
+++ b/MduiBlazor.Shared/Pages/SliderPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>滑块</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">滑块</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">滑块</MduiText>
 </div>
 
 <PageContent>
@@ -19,7 +19,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>普通滑块</b></MduiText>
@@ -37,7 +37,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
