--- a/MduiBlazor.Shared/Pages/TextfieldPage.razor
+++ b/MduiBlazor.Shared/Pages/TextfieldPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>文本框</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">文本框</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">文本框</MduiText>
     <p>文本框一般使用在表单中。MDUI 的文本框拥有字数统计、表单验证等功能。</p>
     <p class="mdui-typo">可以配合<a href="grid">网格布局系统</a>进行表单布局。</p>
 </div>
@@ -28,7 +28,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>单行文本框</b></MduiText>
@@ -67,7 +67,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
