--- a/MduiBlazor.Shared/Pages/Tooltip.razor
+++ b/MduiBlazor.Shared/Pages/Tooltip.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>工具提示</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">工具提示</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">工具提示</MduiText>
     <p>Tooltip 一般用来为其他组件和元素添加说明，它的内容一般是纯文本，不含图片和格式化的文本。</p>
 </div>
 
@@ -20,7 +20,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>Tooltip</b></MduiText>
@@ -34,7 +34,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
