--- a/MduiBlazor.Shared/Pages/TypoPage.razor
+++ b/MduiBlazor.Shared/Pages/TypoPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>排版</PageTitle>
 <h1 class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">排版</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">排版</MduiText>
 </h1>
 
 <PageContent>
@@ -25,7 +25,7 @@
 
 <div>
     <h2 id="typo">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">字体排版</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">字体排版</MduiText>
     </h2>
 
     <p class="mdui-typo">下面是一些基本的排版样式：</p>
@@ -39,7 +39,7 @@
 
 <div>
     <h2 id="contenttypo">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">内容排版</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">内容排版</MduiText>
     </h2>
     <p class="mdui-typo">
         要使元素拥有排版优化后的样式，需要在这些元素的父组件上设置<code>UseMduiTypo</code>参数为<code>true</code>，或者添加类<code>.mdui-typo</code>。
