--- a/MduiBlazor/Components/List/MduiListCollapse.razor
+++ b/MduiBlazor/Components/List/MduiListCollapse.razor
@@ -4,9 +4,13 @@
 
 <li class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <div class="@HeaderClassname" @onclick="@OnTitleClicked">
-        @if(Icon is not null)
+        @if (IconContent is not null)
         {
-            <MduiListItemIcon Icon="@Icon" IconColor="@IconColor" Custom="@CustomIcon" />
+            @IconContent
+        }
+        @if (IconName is not null)
+        {
+            <MduiIcon Icon="@IconName" />
         }
         <div class="mdui-list-item-content">@Title</div>
         <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
