--- a/MduiBlazor.Shared/Pages/ButtonsPage.razor
+++ b/MduiBlazor.Shared/Pages/ButtonsPage.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>按钮</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">按钮</MduiText>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">按钮</MduiText>
     <p>Material Design样式按钮</p>
 </div>
 
@@ -26,7 +26,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>普通按钮</b></MduiText>
@@ -58,7 +58,7 @@
 
 <div>
     <h2 id="attr">
-        <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
     <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
