--- a/MduiBlazor.Shared/Pages/Examples/Icons/ThirdIcons.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Icons/ThirdIcons.razor
@@ -3,8 +3,8 @@
 <MduiIcon Custom Name="ion-plus-circled" />
 <MduiIcon Custom Color="@Colors.Red.Primary" Name="ion-plus-circled" />
 <MduiIcon Custom Color="@Colors.Theme.Primary" Name="ion-plus-circled" />
-<MduiIconButton CustomIcon Icon="ion-plus-round" />
+<MduiIconButton CustomIcon IconName="ion-plus-round" />
 <MduiButton Color="@Colors.Theme.Accent">
     <MduiIcon Custom Name="ion-share" />Share
 </MduiButton>
-<MduiFab CustomIcon Color="@Colors.Theme.Accent" Icon="ion-plus-round" />
+<MduiFab CustomIcon Color="@Colors.Theme.Accent" IconName="ion-plus-round" />
