--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -1,42 +1,58 @@
 ﻿<MduiNavMenu Accordion>
-    <MduiNavMenuItem Icon="near_me" IconColor="@Colors.Blue.Primary" Href="" Match="NavLinkMatch.All">
-        开始使用
+    <MduiNavMenuItem Title="开始使用" Href="" Match="NavLinkMatch.All">
+        <IconContent>
+            <MduiIcon Name="near_me" Color="@Colors.Blue.Primary" />
+        </IconContent>
     </MduiNavMenuItem>
-    <MduiNavMenuCollapseItem Title="样式和布局" Icon="layers" IconColor="@Colors.DeepOrange.Primary">
-        <MduiNavMenuItem Href="colors">颜色</MduiNavMenuItem>
-        <MduiNavMenuItem Href="layout">主题和布局</MduiNavMenuItem>
-        <MduiNavMenuItem Href="grid">网格容器</MduiNavMenuItem>
-        <MduiNavMenuItem Href="typography">排版</MduiNavMenuItem>
-        <MduiNavMenuItem Href="icons">图标</MduiNavMenuItem>
-        <MduiNavMenuItem Href="media">媒体</MduiNavMenuItem>
-        <MduiNavMenuItem Href="classes">辅助类</MduiNavMenuItem>
-    </MduiNavMenuCollapseItem>
-    <MduiNavMenuCollapseItem Title="组件" Icon="widgets" IconColor="@Colors.Green.Primary">
-        <MduiNavMenuItem Href="bars">Bars</MduiNavMenuItem>
-        <MduiNavMenuItem Href="bottomnav">BottomNav</MduiNavMenuItem>
-        <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
-        <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
-        <MduiNavMenuItem Href="select">下拉选择</MduiNavMenuItem>
-        <MduiNavMenuItem Href="divider">分割线</MduiNavMenuItem>
-        <MduiNavMenuItem Href="panels">可扩展面板</MduiNavMenuItem>
-        <MduiNavMenuItem Href="textfield">文本框</MduiNavMenuItem>
-        <MduiNavMenuItem Href="selectcontrol">选择控件</MduiNavMenuItem>
-        <MduiNavMenuItem Href="slider">滑块</MduiNavMenuItem>
-        <MduiNavMenuItem Href="progress">进度指示器</MduiNavMenuItem>
-        <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
-        <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
-        <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
-        <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
-        <MduiNavMenuItem Href="list">List</MduiNavMenuItem>
-        <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
-        <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
-        <MduiNavMenuItem Href="progress">Progress</MduiNavMenuItem>
-        <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
-        <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
-        <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
-        <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
-    </MduiNavMenuCollapseItem>
-    <MduiNavMenuCollapseItem Title="资源" Icon="local_mall" IconColor="@Colors.Purple.Primary">
-        <MduiNavMenuItem Href="material_icon">Material图标库</MduiNavMenuItem>
-    </MduiNavMenuCollapseItem>
+    <MduiNavMenuCollapse Title="样式和布局">
+        <IconContent>
+            <MduiIcon Name="layers" Color="@Colors.DeepOrange.Primary" />
+        </IconContent>
+        <ChildContent>
+            <MduiNavMenuItem Href="colors">颜色</MduiNavMenuItem>
+            <MduiNavMenuItem Href="layout">主题和布局</MduiNavMenuItem>
+            <MduiNavMenuItem Href="grid">网格容器</MduiNavMenuItem>
+            <MduiNavMenuItem Href="typography">排版</MduiNavMenuItem>
+            <MduiNavMenuItem Href="icons">图标</MduiNavMenuItem>
+            <MduiNavMenuItem Href="media">媒体</MduiNavMenuItem>
+            <MduiNavMenuItem Href="classes">辅助类</MduiNavMenuItem>
+        </ChildContent>
+    </MduiNavMenuCollapse>
+    <MduiNavMenuCollapse Title="组件">
+        <IconContent>
+            <MduiIcon Name="widgets" Color="@Colors.Green.Primary" />
+        </IconContent>
+        <ChildContent>
+            <MduiNavMenuItem Href="bars">Bars</MduiNavMenuItem>
+            <MduiNavMenuItem Href="bottomnav">BottomNav</MduiNavMenuItem>
+            <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
+            <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
+            <MduiNavMenuItem Href="select">下拉选择</MduiNavMenuItem>
+            <MduiNavMenuItem Href="divider">分割线</MduiNavMenuItem>
+            <MduiNavMenuItem Href="panels">可扩展面板</MduiNavMenuItem>
+            <MduiNavMenuItem Href="textfield">文本框</MduiNavMenuItem>
+            <MduiNavMenuItem Href="selectcontrol">选择控件</MduiNavMenuItem>
+            <MduiNavMenuItem Href="slider">滑块</MduiNavMenuItem>
+            <MduiNavMenuItem Href="progress">进度指示器</MduiNavMenuItem>
+            <MduiNavMenuItem Href="list">列表</MduiNavMenuItem>
+            <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
+            <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
+            <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
+            <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
+            <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
+            <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
+            <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
+        </ChildContent>
+    </MduiNavMenuCollapse>
+    <MduiNavMenuCollapse Title="资源">
+        <IconContent>
+            <MduiIcon Name="local_mall" Color="@Colors.Purple.Primary" />
+        </IconContent>
+        <ChildContent>
+            <MduiNavMenuItem Href="material_icon">Material图标库</MduiNavMenuItem>
+        </ChildContent>
+    </MduiNavMenuCollapse>
 </MduiNavMenu>
