--- a/MduiBlazor/Components/Button/MduiFab.razor
+++ b/MduiBlazor/Components/Button/MduiFab.razor
@@ -2,5 +2,12 @@
 @inherits MduiComponentBase
 
 <button class="@Classname" style="@Style" @attributes="@AdditionalAttributes" @onclick="@OnClick">
-    <MduiIcon Name="@Icon" Class="@IconClass" Color="@IconColor" Custom="@CustomIcon" />
+    @if (ChildContent is not null)
+    {
+        @ChildContent
+    }
+    else
+    {
+        <MduiIcon Name="@IconName" />
+    }
 </button>
