--- a/MduiBlazor/Components/Button/MduiIconButton.razor
+++ b/MduiBlazor/Components/Button/MduiIconButton.razor
@@ -2,17 +2,15 @@
 @inherits MduiButtonBase
 
 <MduiButton Class="@Classname" Style="@Style" @attributes="@AdditionalAttributes" UseMduiTypo="@UseMduiTypo" ButtonType="@ButtonType"
-    Color="@Color" Dense="@Dense" Disabled="@Disabled" Href="@Href" Target="@Target" HtmlTag="@HtmlTag"
+    Color="@Color" TextColor="@TextColor" Dense="@Dense" Disabled="@Disabled" Href="@Href" Target="@Target" HtmlTag="@HtmlTag"
     DisableRipple="@DisableRipple" DisableRaised="@true" OnClick="@OnClick" Command="@Command"
     CommandParameter="@CommandParameter">
     @if (ChildContent is not null)
     {
-        <i class="@IconClassname">
-            @ChildContent
-        </i>
+        @ChildContent
     }
-    else if (!string.IsNullOrWhiteSpace(Icon))
+    else
     {
-        <MduiIcon Name="@Icon" Color="@IconColor" Custom="@CustomIcon" />
+        <MduiIcon Name="@IconName" />
     }
 </MduiButton>
