--- a/MduiBlazor/Components/List/MduiListItem.razor
+++ b/MduiBlazor/Components/List/MduiListItem.razor
@@ -2,5 +2,20 @@
 @inherits MduiComponentBase
 
 <li class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    @ChildContent
+    @if (ChildContent is not null)
+    {
+        @ChildContent
+    }
+    else
+    {
+        if (IconContent is not null)
+        {
+            @IconContent
+        }
+        else if (IconName is not null)
+        {
+            <MduiIcon Name="@IconName" />
+        }
+        <MduiListContent Title="@Title" />
+    }
 </li>
