--- a/MduiBlazor/Components/NavMenu/MduiNavMenuCollapse.razor
+++ b/MduiBlazor/Components/NavMenu/MduiNavMenuCollapse.razor
@@ -4,9 +4,13 @@
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <div class="@HeaderClassname" @onclick="@OnTitleClicked">
-        @if (Icon is not null)
+        @if (IconContent is not null)
         {
-            <MduiListItemIcon Icon="@Icon" IconColor="@IconColor" Custom="@CustomIcon" />
+            @IconContent
+        }
+        else if (Icon is not null)
+        {
+            <MduiIcon Name="@Icon" />
         }
         <div class="mdui-list-item-content">@Title</div>
         <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
