--- a/mdui/src/components/list/index.less
+++ b/mdui/src/components/list/index.less
@@ -78,14 +78,14 @@
   &:hover {
     background-color: @color-hover-black;
   }
-}
 
-/* 列表项图标 */
-.mdui-list-item-icon {
-  width: 24px;
-  min-width: 24px;
-  height: 24px;
-  color: @color-black-icon;
+  /* 列表项图标 */
+  .mdui-icon {
+    width: 24px;
+    min-width: 24px;
+    height: 24px;
+    color: @color-black-icon;
+  }
 }
 
 /* 列表项头像 */
@@ -95,7 +95,6 @@
   height: 40px;
   margin-top: 8px;
   margin-bottom: 8px;
-  color: @color-white;
   line-height: 40px;
   text-align: center;
   background-color: @color-grey-400;
@@ -105,6 +104,10 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
+  }
+
+  .mdui-icon {
+    color: @color-white !important;
   }
 }
 
@@ -119,14 +122,11 @@
 }
 
 /* 列表项内容的副内容 */
-.mdui-list-item-text {
-  font-size: 14px;
-  opacity: @opacity-black-secondary;
-}
-
 .mdui-list-item-title {
   ~.mdui-list-item-text {
     margin-top: 4px;
+    font-size: 14px;
+    opacity: @opacity-black-secondary;
   }
 }
 
@@ -139,8 +139,10 @@
     font-weight: 700;
   }
 
-  .mdui-list-item-text {
-    font-weight: 400;
+  .mdui-list-item-title {
+    ~.mdui-list-item-text {
+      font-weight: 400;
+    }
   }
 }
 
@@ -170,22 +172,11 @@
 }
 
 /* 列表项内的元素间添加间距 */
-.mdui-list-item-icon {
-  ~.mdui-list-item-content {
-    margin-left: 16px;
-  }
-}
-
+.mdui-list-item-avatar,
 .mdui-checkbox,
+.mdui-switch,
 .mdui-radio,
-.mdui-switch {
-  ~.mdui-list-item-content {
-    margin-left: 16px;
-  }
-}
-
-
-.mdui-list-item-avatar {
+.mdui-icon {
   ~.mdui-list-item-content {
     margin-left: 16px;
   }
@@ -193,11 +184,11 @@
 
 .mdui-list-item-content {
 
-  ~.mdui-list-item-icon,
   ~.mdui-list-item-avatar,
   ~.mdui-checkbox,
+  ~.mdui-switch,
   ~.mdui-radio,
-  ~.mdui-switch {
+  ~.mdui-icon {
     margin-left: 16px;
   }
 
@@ -245,10 +236,10 @@
   }
 
   // 图标
-  .mdui-list-item-icon {
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
+  .mdui-icon {
+    width: 20px !important;
+    height: 20px !important;
+    font-size: 20px !important;
   }
 
   // 头像
@@ -267,13 +258,10 @@
     line-height: 18px;
   }
 
-  .mdui-list-item-text {
-    font-size: 13px;
-  }
-
   .mdui-list-item-title {
     ~.mdui-list-item-text {
       margin-top: 2px;
+      font-size: 13px;
     }
   }
 
@@ -325,13 +313,15 @@
   }
 
   // 列表项图标
-  .mdui-list-item-icon {
+  .mdui-icon {
     color: @color-white-icon;
   }
 
   // 列表内容副内容
-  .mdui-list-item-text {
-    opacity: @opacity-white-secondary;
+  .mdui-list-item-title {
+    ~.mdui-list-item-text {
+      opacity: @opacity-white-secondary;
+    }
   }
 
   // 激活状态的列表项
@@ -347,10 +337,6 @@
  */
 [class*="mdui-color-"] {
   .mdui-list-item {
-    color: inherit;
-  }
-
-  .mdui-list-item-icon {
     color: inherit;
   }
 }
